use global method security